<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "TeamApp">
    <!ENTITY author "Gunnar Friðriksson">
    ]>

<resources>
    <string name="app_name">&appname;</string>

    <!-- Login and signup activities -->
    <string name="username_field">Username</string>
    <string name="email_field">Email</string>
    <string name="password_field">Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="member_button">Already a member? Login</string>

    <!-- The welcome screen -->
    <string name="welcome_message">Welcome to &appname;!</string>
    <string name="create_game_button">create new game</string>
    <string name="join_game_button">join new game</string>

    <string name="no_games">No existing games</string>
    <string name="some_games">Some existing games</string>

    <!-- Creating new game dialog -->
    <string name="create_game_title">Create Game</string>
    <string name="new_game_name">Game Name (eg. Club Awesome)</string>
    <string name="new_game_type">Game Type (eg. Football)</string>
    <string name="create_game_cancel">Cancel</string>
    <string name="create_game_finish">Create</string>

    <!-- Joining new game dialog -->
    <string name="join_game_title">Join Game</string>
    <string name="join_game_id">Game Id (shared from someone)</string>
    <string name="join_game_finish">Join!</string>

    <!-- Leave game dialog -->
    <string name="leave_game_title">Leave Game</string>
    <string name="leave_game_cancel">Cancel</string>
    <string name="leave_game_ok">OK</string>

    <!-- Fragment interaction error message -->
    <string name="frag_listener_exception">must implement OnFragmentInteractionListener</string>

    <!-- Select player dialog -->
    <string name="select_player_title">Select Player</string>
    <string name="select_player_button">Select</string>

    <string name="web_client_id">977777569614-f6qbsej2l01urcv3a8ksqjusng7e8vbd.apps.googleusercontent.com</string>
</resources>
