<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/create_game_title"
        tools:text="@string/create_game_title"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginTop="@dimen/top_margin" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin">
        <EditText
            android:id="@+id/new_game_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/new_game_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin">
        <EditText
            android:id="@+id/new_game_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/new_game_type" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_game_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:text="@string/create_game_finish"/>

    <Button
        android:id="@+id/create_game_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:text="@string/create_game_cancel" />
</LinearLayout>