<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/add_game_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginTop="@dimen/starting_margin"
        android:text="@string/welcome_message" />

    <Button
        android:id="@+id/create_game_button"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/upper_button_margin"
        android:text="@string/create_game_button" />

    <Button
        android:id="@+id/join_game_button"
        android:layout_width="@dimen/large_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button_separation"
        android:text="@string/join_game_button" />
</LinearLayout>