<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/join_game_title"
        android:text="@string/join_game_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginTop="@dimen/top_margin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginTop="@dimen/top_margin">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/join_game_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/join_game_id" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/join_game_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:text="@string/join_game_finish"/>
</LinearLayout>