<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/leave_game_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Leave Group"
        android:text="@string/leave_game_title"/>

    <Button
        android:id="@+id/leave_game_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:text="@string/leave_game_cancel"
        app:layout_constraintEnd_toStartOf="@+id/leave_game_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leave_game_title"
        app:layout_constraintHorizontal_chainStyle="spread"/>

    <Button
        android:id="@+id/leave_game_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:layout_marginLeft="@dimen/left_right_margin"
        android:layout_marginStart="@dimen/left_right_margin"
        android:layout_marginRight="@dimen/left_right_margin"
        android:layout_marginEnd="@dimen/left_right_margin"
        android:text="@string/leave_game_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/leave_game_cancel"
        app:layout_constraintTop_toBottomOf="@+id/leave_game_title" />
</android.support.constraint.ConstraintLayout>